# winter_fractal

./: .gitignore  Cargo.toml  LICENSE  README.md
fractal_accumulator/: Cargo.toml
fractal_accumulator/src/: errors.rs  lib.rs
fractal_accumulator/src/accumulator/: mod.rs
fractal_accumulator_verifier/: Cargo.toml
fractal_accumulator_verifier/src/: errors.rs  lib.rs
fractal_accumulator_verifier/src/accumulator_verifier/: mod.rs
fractal_examples/: Cargo.toml
fractal_examples/jsnark_outputs/: fftexample.arith  fftexample.in  fftexample.wires  fftexample_10.arith  fftexample_10.in  fftexample_10.wires  fftexample_12.arith  fftexample_12.in  fftexample_12.wires  fftexample_7.in  fftexample_7.wires  fftexample_8.arith  fftexample_9.arith  fftexample_9.in  fftexample_9.wires  fftexample_long.in  fibonacciexample.wires  fibonacciexample_10.arith  fibonacciexample_11.wires  fibonacciexample_12.arith  fibonacciexample_12.wires  fibonacciexample_13.arith  fibonacciexample_13.wires  fibonacciexample_14.arith  fibonacciexample_14.wires  fibonacciexample_15.arith  fibonacciexample_15.wires  fibonacciexample_16.wires  fibonacciexample_5.arith  fibonacciexample_5.wires  fibonacciexample_6.arith  fibonacciexample_6.wires  fibonacciexample_7.wires  fibonacciexample_8.arith  fibonacciexample_9.arith  fibonacciexample_9.wires
fractal_examples/src/: jsnark_parser_example.rs  lib.rs  old_sample.arith  r1cs_orchestrator.rs  sample_r1cs_proof.rs  sample_r1cs_proof_batched.rs  tests.rs
fractal_examples2/: Cargo.toml
fractal_examples2/jsnark_outputs/: sample.arith
fractal_examples2/src/: gen_options.rs  jsnark_parser_example.rs  lib.rs
fractal_indexer/: Cargo.toml
fractal_indexer/src/: errors.rs  index.rs  indexed_matrix.rs  lib.rs  mod.rs  snark_keys.rs  tests.rs
fractal_math/: Cargo.toml
fractal_math/src/: lib.rs
fractal_math/src/field/: mod.rs
fractal_math/src/field/smallprimefield/: mod.rs
fractal_proofs/: Cargo.toml
fractal_proofs/src/: commitments.rs  lib.rs
fractal_prover/: Cargo.toml
fractal_prover/src/: channel.rs  errors.rs  lib.rs  prover_channel.rs
fractal_prover/src/accumulator/: mod.rs
fractal_prover/src/batched_lincheck_full_prover/: mod.rs
fractal_prover/src/batched_lincheck_prover/: mod.rs
fractal_prover/src/lincheck_prover/: mod.rs
fractal_prover/src/linked_prover/: mod.rs
fractal_prover/src/low_degree_batch_prover/: mod.rs
fractal_prover/src/low_degree_prover/: mod.rs
fractal_prover/src/prover/: mod.rs
fractal_prover/src/rowcheck_prover/: mod.rs
fractal_prover/src/sumcheck_prover/: mod.rs
fractal_sumcheck/: Cargo.toml
fractal_sumcheck/src/: errors.rs  lib.rs
fractal_sumcheck/src/sumcheck_prover/: mod copy.rs  mod.rs  tests.rs
fractal_sumcheck/src/sumcheck_verifier/: mod.rs
fractal_utils/: Cargo.toml
fractal_utils/src/: channel.rs  errors.rs  lib.rs  matrix_utils.rs  polynomial_utils.rs  tests.rs
fractal_verifier/: Cargo.toml
fractal_verifier/src/: channel.rs  errors.rs  lib.rs  verifier_channel.rs
fractal_verifier/src/accumulator_verifier/: mod.rs
fractal_verifier/src/batched_lincheck_verifier/: mod.rs
fractal_verifier/src/lincheck_verifier/: mod.rs
fractal_verifier/src/low_degree_batch_verifier/: mod.rs
fractal_verifier/src/low_degree_verifier/: mod.rs
fractal_verifier/src/rowcheck_verifier/: mod.rs
fractal_verifier/src/sumcheck_verifier/: mod.rs
fractal_verifier/src/verifier/: mod.rs
fractal_verifier/src/verifier_with_batched_lincheck/: mod.rs
fractal_verifier/stats/: flame-graph.html
low_degree/: Cargo.toml
low_degree/src/: errors.rs  lib.rs
low_degree/src/low_degree_batch_prover/: mod.rs
low_degree/src/low_degree_batch_verifier/: mod.rs
low_degree/src/low_degree_prover/: mod.rs
low_degree/src/low_degree_verifier/: mod.rs
low_degree_prover/: Cargo.toml
low_degree_prover/src/: lib.rs
low_degree_prover/src/low_degree_batch_prover/: mod.rs
low_degree_prover/src/low_degree_prover/: mod.rs
low_degree_verifier/: Cargo.toml
low_degree_verifier/src/: errors.rs  lib.rs
low_degree_verifier/src/low_degree_batch_verifier/: mod.rs
low_degree_verifier/src/low_degree_verifier/: mod.rs
math/: Cargo.toml
math/src/field/: mod.rs
math/src/field/smallprimefield/: mod.rs  tests.rs
models/: Cargo.toml
models/src/: errors.rs  io.rs  jsnark_arith_parser.rs  jsnark_wire_parser.rs  lib.rs  mod.rs  r1cs.rs  sample.wires  tests.rs  utils.rs
reports/: Cargo.toml
reports/src/: flame_local.rs  lib.rs  reporter.rs
stats/: flame-graph-new.html  flame-graph.html
