[workspace]
members = [
  "fractal_accumulator",
  "fractal_accumulator_verifier",
  "fractal_examples",
  "fractal_examples2",
  "fractal_indexer",
  "fractal_math",
  "fractal_proofs",
  "fractal_prover",
  "fractal_utils",
  "fractal_verifier",
  "low_degree_prover",
  "low_degree_verifier",
  "models"
]

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
