[package]
name = "fractal_examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jsnark-parser"
path = "src/jsnark_parser_example.rs"
bench = false
doc = false
debug = 1

[[bin]]
name = "fractal-orchestrator"
path = "src/sample_r1cs_proof.rs"
bench = false
doc = false
debug = 1

[[bin]]
name = "fractal-orchestrator-2"
path = "src/sample_r1cs_proof_batched.rs"
bench = false
doc = false
debug = 1

[features]
default = ["flame_it"]
flame_it = ["flame", "flamer", "fractal_utils/flame_it", "fractal_indexer/flame_it", "fractal_prover/flame_it", "fractal_verifier/flame_it", "models/flame_it"]

[dependencies]
displaydoc = "0.1.7"
flame = { version = "0.2", optional = true }
flamer = { version = "0.3", optional = true }
fractal_utils = { path = "../fractal_utils" }
fractal_proofs = {path = "../fractal_proofs" }
fractal_indexer = {path = "../fractal_indexer" }
fractal_prover = {path = "../fractal_prover" }
fractal_verifier = {path = "../fractal_verifier" }
lazy_static = "1.4.0"
log = { version = "0.4", default-features = false }
models = { version = "0.1.0", path = "../models", package = "winter-models", default-features = false }
reports = { version = "0.1.0", path = "../reports", package = "reports", default-features = false }
regex = "1"
serde = { version = "1.0.117", features = ["derive"] }
sscanf = "0.1.4"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0.22"
winter-crypto = "0.4.0"
winter-fri = "0.4.0"
winter-math = "0.4.0"
winter-utils = "0.4.0"
