[package]
name = "fractal_indexer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
displaydoc = "0.1.7"
fractal-math = { version = "0.1.0", path = "../fractal_math", package = "fractal-math", default-features = false }
fractal_utils = { path = "../fractal_utils" }
#crypto = { version = "0.3.1", path = "../crypto", package = "winter-crypto", default-features = false }
#fri = { version = "0.3.0", path = '../fri', package = "winter-fri", default-features = false }
log = { version = "0.4", default-features = false }
#math = { version = "0.3.0", path = "../math", package = "winter-math", default-features = false }
models = { version = "0.1.0", path = "../models", package = "winter-models", default-features = false }
#utils = { version = "0.3.0", path = "../utils/core", package = "winter-utils", default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.22"
regex = "1"
lazy_static = "1.4.0"
sscanf = "0.1.4"
winter-crypto = "0.4.0"
winter-fri = "0.4.0"
winter-math = "0.4.0"
winter-rand-utils = "0.4.0"
winter-utils = "0.4.0"