[package]
name = "fractal_utils"
version = "0.1.0"
authors = ["harjasleenmalvai <harjasleen_malvai@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.1.7"
fractal-math = { version = "0.1.0", path = "../fractal_math", package = "fractal-math", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.22"
winter-crypto = "0.4.0"
winter-fri = "0.4.0"
winter-air = "0.4.0"
winter-math = "0.4.0"
winter-utils = "0.4.0"
